--- a/src/sass/themes/cove-manila.scss
+++ b/src/sass/themes/cove-manila.scss
@@ -597,8 +597,9 @@
 
     // FEATURED DJ BELOW
     .cove-manila-row-2-sub-2 {
-      margin-top: 72%;
-      position: relative;
+      margin-top: 50%;
+      position: absolute;
+      width: 100%;
 
       .featured-dj-below {
         .featured-dj-below-profile {
