--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,6 +5,7 @@ $font-family-gotham-book: 'Gotham Book', 'Open Sans', 'Roboto', Verdana, serif;
 $font-family-gotham-black: 'Gotham Black', 'Arial Black', serif;
 $font-family-gotham-light: 'Gotham Light', 'Open Sans', Verdana, serif;
 $font-family-gotham-medium: 'Gotham Medium', 'Open Sans', 'Roboto', serif;
+$font-family-gotham-medium-fall-back: 'Open Sans', serif;
 $font-family-playfair-display-regular: 'Fairplay Display', 'Times New Roman', Georgia, serif;
 
 // reusable
